<resources>
	<string name="app_name">Stopp Corona</string>
	<string name="current_language">en</string>
	<string name="general_ok">OK</string>
	<string name="general_infection_messages_notification_channel_name">Infection notices</string>
	<string name="general_self_retest_notification_channel_name">Self retesting notices</string>
	<string name="general_self_recovered_channel_name">Some has recovered notices</string>
	<string name="general_self_quarantine_channel_name">Quarantine notices</string>
	<string name="general_automatic_bt_detection_channel_name">Automatic Bluetooth device detection notices</string>
	<string name="general_uploading_keys_channel_name">Notices regarding the uploading of your own keys</string>
	<string name="general_sun_downer_channel_name">End of operation notices</string>
	<string name="general_today">Today</string>
	<string name="general_continue">Continue</string>
	<string name="general_additional_information">Further information</string>
	<string name="general_back">Back</string>
	<string name="general_date_format">d. MMMM</string>
	<string name="general_cancel">Cancel</string>
	<string name="accessibility_heading_1">Heading 1</string>
	<string name="accessibility_heading_2">Heading 2</string>
	<string name="accessibility_onboarding_finish_button_disabled_description">Finished button: Declaration of consent not agreed</string>
	<string name="accessibility_self_testing_next_button_disabled_description">Next button: Question not answered</string>
	<string name="accessibility_certificate_report_status_button_disabled_description">Report infection button: Please confirm that you have provided all information truthfully</string>
	<string name="accessibility_revoke_sickness_button_disabled_description">confirm all-clear button: Please confirm your revocation of your sick note</string>
	<string name="accessibility_self_testing_report_status_button_disabled_description">Report a suspected infection button: Please confirm that you have provided all information truthfully</string>
	<string name="accessibility_revokation_report_status_button_disabled_description">Revoke infection message button: Please confirm that you have provided all information truthfully</string>
	<string name="error_no_internet_title">No internet connection</string>
	<string name="error_no_internet_message">Check your internet connection and try again. </string>
	<string name="error_server_title">Server error</string>
	<string name="error_server_message">Something went wrong. Please try again later. </string>
	<string name="error_unknown_title">Unknown error</string>
	<string name="error_unknown_message">An unknown error has occurred. Please try again later. </string>
	<string name="onboarding_headline_1">Welcome</string>
	<string name="onboarding_copy_1_img">Image: Falling numbers of Corona cases</string>
	<string name="onboarding_copy_1_1">By using the Stopp Corona app, you are helping to </string>
	<string name="onboarding_copy_1_2">slow down the spread of the virus</string>
	<string name="onboarding_copy_1_3">and save lives.</string>
	<string name="onboarding_copy_1_4"></string>
	<string name="onboarding_copy_1_5"></string>
	<string name="onboarding_headline_2">Risk assessment</string>
	<string name="onboarding_copy_2_img">Image: Contacts are identified via Bluetooth</string>
	<string name="onboarding_copy_2_1">Activate the automatic risk assessment via Bluetooth to save contacts</string>
	<string name="onboarding_copy_2_2">anonymously and locally</string>
	<string name="onboarding_copy_2_3">and to determine your</string>
	<string name="onboarding_copy_2_4">current risk of infection.</string>
	<string name="onboarding_copy_2_5"></string>
	<string name="onboarding_headline_3">Notification of risk contact</string>
	<string name="onboarding_copy_3_img">Image: Notification of a contact\'s illness</string>
	<string name="onboarding_copy_3_1">If one of your contacts falls ill, you will be notified of the </string>
	<string name="onboarding_copy_3_2">time of your last risk encounter</string>
	<string name="onboarding_copy_3_3">.</string>
	<string name="onboarding_headline_4">Report suspicion or infection</string>
	<string name="onboarding_copy_4_img">Image: Warning for your contacts</string>
	<string name="onboarding_copy_4_1">If you should contract COVID-19 yourself or suspect it, you can warn your contacts</string>
	<string name="onboarding_copy_4_2">anonymously via the app</string>
	<string name="onboarding_copy_4_3">to stop the spread.</string>
	<string name="onboarding_headline_5">Thank you for using the app!</string>
	<string name="onboarding_copy_5_1">You are actively protecting your health and the health of others.
\n
\nBy installing the app, you agree to the</string>
	<string name="onboarding_copy_5_2">terms of use</string>
	<string name="onboarding_copy_5_3">.\n \nDo you have any questions? Read more in the</string>
	<string name="onboarding_copy_5_4">FAQs</string>
	<string name="onboarding_headline_7">Cross-border use</string>
	<string name="onboarding_copy_7_1">In the case of a confirmed infection,</string>
	<string name="onboarding_copy_7_2">warning across borders</string>
	<string name="onboarding_copy_7_3">is possible.\nContacts from other EU countries can be warned or warn you anonymously in the event of an infection using the app.</string>
	<string name="onboarding_copy_7_img">Image: Notifications and warnings from contacts across Europe</string>
	<string name="onboarding_next_button">Continue</string>
	<string name="onboarding_finish_button">Finished</string>
	<string name="onboarding_headline_6">Declaration of consent</string>
	<string name="onboarding_dataprivacy_description_1">I agree that the Austrian Red Cross (ÖRK) may process my personal data (random figures [“random-IDs], my telephone number, and any suspicion and reporting of my COVID-19 condition [= health data]) for the purpose of rapid interruption of the corona infection chain. </string>
	<string name="onboarding_dataprivacy_approval">I consent</string>
	<string name="onboarding_dataprivacy_description_2_1">I may revoke my consent at any time, whereby revocation does not affect the lawfulness of processing up until the time that consent is revoked. \n\nFurther information can be found in our</string>
	<string name="onboarding_dataprivacy_description_2_2">privacy policy.</string>
	<string name="onboarding_headline_terms_of_use">Terms of use</string>
	<string name="onboarding_headline_data_privacy">Privacy policy</string>
	<string name="main_headline">Together against the corona virus</string>
	<string name="main_body_contact_title">Risk assessment</string>
	<string name="main_body_contact_description">Start the risk assessment to save an encounter. Contacts will be notified anonymously should you fall ill.</string>
	<string name="main_automatic_handshake_description_disabled">Please note, in quarantine you should reduce your contacts to a minimum, therefore the handshake is no longer possible.</string>
	<string name="main_button_start_handshake_button">Start manual handshake</string>
	<string name="main_body_saved_encounters">Saved Encounters (%,d)</string>
	<string name="main_body_feeling_title">Are you not feeling well?</string>
	<string name="main_body_feeling_description">Check your symptoms for a possible corona infection.</string>
	<string name="main_button_feel_today_button">Check symptoms</string>
	<string name="main_button_suspicion_button">Report suspected corona
</string>
	<string name="main_body_report_title">Are you infected with COVID-19 yourself?</string>
	<string name="main_body_report_description">Report a medically confirmed infection to protect your contacts. Your contacts will be notified about an anonymous risk contact.</string>
	<string name="main_body_report_button">Report medical confirmation</string>
	<string name="main_play_services_not_available_dialog_title">Device does not support Google PlayServices</string>
	<string name="sickness_certificate_attest_report_healthy_dialog_headline">End quarantine</string>
	<string name="sickness_certificate_attest_report_healthy_dialog_description">If you are healthy and your quarantine notice has expired, you can end the quarantine in the app using the button below.</string>
	<string name="sickness_certificate_attest_report_healthy_dialog_button">End quarantine</string>
	<string name="contact_history_header_date">Date</string>
	<string name="contact_history_header_time">Period</string>
	<string name="contact_history_header_automatic_mode_value">autom.</string>
	<string name="questionnaire_report_suspicion_headline">Report your status to protect others</string>
	<string name="questionnaire_report_suspicion_description">Your anonymous report helps to break the chain of infection. Your contacts may have been infected unnoticed and have already passed the virus on. Warn these people as soon as possible so that you stay away from other people.</string>
	<string name="questionnaire_report_suspicion_date_headline">How long have you had symptoms or a positive test result?</string>
	<string name="questionnaire_report_suspicion_report_contacts_headline">Warn your contacts</string>
	<string name="questionnaire_report_suspicion_report_contacts_confirmed">Do you already have a positive test result?</string>
	<string name="questionnaire_report_suspicion_report_contacts_confirmed_button">Report medical confirmation</string>
	<string name="questionnaire_report_suspicion_report_contacts_not_confirmed">You haven\'t taken a test yet or are you still waiting for your test result?</string>
	<string name="questionnaire_report_suspicion_report_contacts_not_confirmed_button">Report suspicion</string>
	<string name="diary_delete_title">Are you sure you want to delete the entry?</string>
	<string name="diary_delete_description">This activity cannot be reversed.</string>
	<string name="diary_delete_delete_button">Delete</string>
	<string name="diary_delete_cancel_button">Cancel</string>
	<string name="diary_faq_headline">What do I need the contact diary for?</string>
	<string name="diary_faq_info_content_1">A contact diary helps you to keep track of your contacts over the last 14 days.</string>
	<string name="diary_faq_info_content_2">If you are infected with the coronavirus, the health department will need to reach out to all of your recent contacts.\nOur primary focus will be on people you had contact with 48 hours before the onset of symptoms. Your contact diary helps us to quickly identify potential carriers of COVID-19, helping to slow the spread of the disease.</string>
	<string name="diary_faq_info_content_3">If necessary, the Magistrate’s Health Department may ask for a copy of your contact diary and their contact information. Your contact diary helps you by having all this information ready. The diary entries are visible exclusively to you and are only kept in the app on your phone. This information won\'t be forwarded or used for contact tracing.</string>
	<string name="diary_faq_info_content_4">Entries older than 14 days are automatically deleted.</string>
	<string name="covid_statistics_legend_title">7-day incidence: by thresholds</string>
	<string name="covid_statistics_legend_description">The color coding of the individual districts shows their 7-day incidence according to fixed threshold values. This way you can see directly which districts currently have a very high or low value.</string>
	<string name="covid_statistics_legend_no_changes">0 / No changes</string>
	<string name="covid_statistics_legend_under_one_hundred">%s 100 new cases</string>
	<string name="covid_statistics_legend_above_one_hundred">≥ 100 new cases</string>
	<string name="covid_statistics_legend_above_two_hundred">≥ 200 new cases</string>
	<string name="covid_statistics_legend_above_four_hundred">≥ 400 new cases</string>
	<string name="covid_statistics_legend_close">Close</string>
</resources>