<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_style"
            android:orientation="vertical"
            android:padding="36dp">


            <TextView
                android:id="@+id/txtHeadline"
                style="@style/AppTheme.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/covid_statistics_legend_title" />

            <TextView
                android:id="@+id/txtDescription"
                style="@style/AppTheme.Copy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:text="@string/covid_statistics_legend_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/statistics_legend_0" />

                    <TextView
                        style="@style/AppTheme.Copy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="15dp"
                        android:text="@string/covid_statistics_legend_no_changes" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/statistics_legend_less_100" />

                    <TextView
                        android:id="@+id/underOneHundredTxt"
                        style="@style/AppTheme.Copy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="15dp"
                        android:text="@string/covid_statistics_legend_under_one_hundred" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/statistics_legend_more_100" />

                    <TextView
                        style="@style/AppTheme.Copy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="15dp"
                        android:text="@string/covid_statistics_legend_above_one_hundred" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/statistics_legend_200" />

                    <TextView
                        style="@style/AppTheme.Copy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="15dp"
                        android:text="@string/covid_statistics_legend_above_two_hundred" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/statistics_legend_400" />

                    <TextView
                        style="@style/AppTheme.Copy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="15dp"
                        android:text="@string/covid_statistics_legend_above_four_hundred" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnClose"
                style="@style/AppTheme.ButtonLargeType1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/covid_statistics_legend_close" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>