<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/transparentAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/AppTheme.ToolbarTheme" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="28dp"
        app:layout_constraintTop_toBottomOf="@id/transparentAppBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtHeadline1"
                style="@style/AppTheme.Copy.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="24dp"
                android:text="@string/diary_faq_headline" />

            <TextView
                android:id="@+id/txtDescription1"
                style="@style/AppTheme.Copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/diary_faq_info_content_1" />

            <TextView
                android:id="@+id/txtDescription2"
                style="@style/AppTheme.Copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/diary_faq_info_content_2" />

            <TextView
                android:id="@+id/txtDescription3"
                style="@style/AppTheme.Copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/diary_faq_info_content_3" />

            <TextView
                android:id="@+id/txtDescription4"
                style="@style/AppTheme.Copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="54dp"
                android:text="@string/diary_faq_info_content_4" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>