<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/transparentAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            app:elevation="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/AppTheme.ToolbarTheme" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:id="@+id/scrollViewContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/transparent"
            app:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/transparentAppBar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtHeadline"
                    style="@style/AppTheme.Heading2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="28dp"
                    android:text="@string/questionnaire_report_suspicion_headline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtDescription"
                    style="@style/AppTheme.Copy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/questionnaire_report_suspicion_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtHeadline" />

                <TextView
                    android:id="@+id/txtDateHeadline"
                    style="@style/AppTheme.Heading2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/questionnaire_report_suspicion_date_headline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtDescription" />

                <Button
                    android:id="@+id/datePicker"
                    style="@style/AppTheme.DateSelector"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/general_today"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtDateHeadline" />

                <TextView
                    android:id="@+id/txtConfirmContactsHeadline"
                    style="@style/AppTheme.Heading2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/questionnaire_report_suspicion_report_contacts_headline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/datePicker" />

                <TextView
                    android:id="@+id/txtConfirmContacts"
                    style="@style/AppTheme.Copy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/questionnaire_report_suspicion_report_contacts_confirmed"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtConfirmContactsHeadline" />

                <Button
                    android:id="@+id/btnConfirmContacts"
                    style="@style/AppTheme.ButtonLargeType1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/questionnaire_report_suspicion_report_contacts_confirmed_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtConfirmContacts"/>

                <TextView
                    android:id="@+id/txtNotConfirmContacts"
                    style="@style/AppTheme.Copy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/questionnaire_report_suspicion_report_contacts_not_confirmed"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnConfirmContacts" />

                <Button
                    android:id="@+id/btnNotConfirmContacts"
                    style="@style/AppTheme.ButtonLargeType1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="40dp"
                    android:text="@string/questionnaire_report_suspicion_report_contacts_not_confirmed_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtNotConfirmContacts"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>